--- a/examples/Phonelist/Snakefile
+++ b/examples/Phonelist/Snakefile
@@ -4,6 +4,8 @@ import os.path
 import re
 
 configfile: 'config.yaml'
+reporter = "../../datareport/reporter.py"   # this should just be "reporter"
+
 
 
 def data(name):
@@ -16,35 +18,53 @@ def report(name):
 def report_html(name):
     return os.path.join(config['outdir_html'], name.lstrip('/'))
 
-reporter = "../../datareport/reporter.py"   # this should just be "reporter"
-
 rule all:
     input:
         report_html('Phonelist.html'),
 
 
 rule mkhtml:
+    '''
+    This rule uses Pandoc to convert a Markdown file to HTML. Some extensions
+    are enabled to produce nice tables.
+
+    Apart from the actual Markdown formatted report, also the style sheet (CSS)
+    is required in the output folder. This is copied in by another rule.
+    '''
     input:
         files=[report('{name}.md')],
         css=report_html('document.css'),
     output:
         report_html('{name}.html'),
+    params:
+        extensions="+simple_tables+multiline_tables",
     shell:
         '''
-        pandoc -f markdown+simple_tables+multiline_tables -t html --css "$(basename "{input.css}")" -o {output} {input.files}
+        pandoc -f markdown{params.extensions} -t html --css "$(basename "{input.css}")" -o {output} {input.files}
         '''
 
 rule copy_css:
+    '''
+    For nice styling of the output HTML files, we copy the style sheet (CSS)
+    into the HTML destination folder.
+    '''
     output:
         '{path}/{name}.css',
     input:
         '{name}.css',
     shell:
-        'cp -iv {input} {output}'
+        '''
+        cp -v {input} {output}
+        '''
 
 rule make_Phonelist:
     '''
-    output: MARKDOWN file
+    This is the main rule which compiles the report with the given data.
+
+    The report target format is defined by the format of the used template. In
+    this example we want to produce a Markdown document which can later be
+    converted to many other formats. The placeholders in the template file are
+    filled with the data from the Phonelist YAML file given as data parameter.
     '''
     input:
         'templates/Phonelist.md',
